alignment issues

--- a/src/app/css/header.scss
+++ b/src/app/css/header.scss
@@ -1,6 +1,7 @@
 $background:lightblue;
 h3{
     background: $background;
+    box-sizing: border-box;
     width:100%;
     padding: 20px;
     margin:0;
